--- a/projectsphone.css
+++ b/projectsphone.css
@@ -46,16 +46,18 @@ html {
     height: 100%;
 }
 .box {
-    background-color: grey;
+    background-color: #2C332B;
     margin: 15px;
     width: 90%;
-    color: #364A32;-webkit-transition: background-color 0.2s;
+    color: #61C451;
+    -webkit-transition: background-color 0.2s;
     -moz-transition: background-color 0.2s;
     -o-transition: background-color 0.2s;
     transition: background-color 0.2s;
 }
 .box:hover {
 background-color: white;
+color:#364A32;
 }
 .box h2,h4 {
     margin: 15px;
