--- a/projectstablet.css
+++ b/projectstablet.css
@@ -40,9 +40,9 @@ html {
     height: 100%;
 }
 .box {
-    background-color: gray;
+    background-color: #2C332B;
     margin: 15px;
-    color: #364A32;
+    color: #61C451;
     -webkit-transition: background-color 0.2s;
     -moz-transition: background-color 0.2s;
     -o-transition: background-color 0.2s;
@@ -50,6 +50,7 @@ html {
 }
 .box:hover {
 background-color: white;
+color:#364A32;
 }
 .box h2,h4 {
     margin: 15px;
